--- a/node18.html
+++ b/node18.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1184"
+<A NAME="tex2html1186"
   HREF="node19.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1178"
+<A NAME="tex2html1180"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1172"
+<A NAME="tex2html1174"
   HREF="node17.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1180"
+<A NAME="tex2html1182"
   HREF="node91.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1182"
+<A NAME="tex2html1184"
   HREF="node94.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -80,18 +80,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1185"
+<B> Sig:</B> <A NAME="tex2html1187"
   HREF="node19.html">Práctica: Analizador Léxico para</A>
-<B>Sup:</B> <A NAME="tex2html1179"
+<B>Sup:</B> <A NAME="tex2html1181"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html1173"
+<B> Ant:</B> <A NAME="tex2html1175"
   HREF="node17.html">Ejercicios</A>
 <B> Con:</B> 
-<A NAME="tex2html1180"
+<A NAME="tex2html1182"
   HREF="node91.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1182"
+<A NAME="tex2html1184"
   HREF="node94.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -103,40 +103,44 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html1186"
-  HREF="node18.html#SECTION041110010000000000000">Donde</A>
-<LI><A NAME="tex2html1187"
-  HREF="node18.html#SECTION041110020000000000000">index.html</A>
 <LI><A NAME="tex2html1188"
-  HREF="node18.html#SECTION041110030000000000000">Ficheros</A>
+  HREF="node18.html#SECTION041110010000000000000">Donde</A>
 <LI><A NAME="tex2html1189"
-  HREF="node18.html#SECTION041110040000000000000">Registrando Manejadores de Eventos</A>
+  HREF="node18.html#SECTION041110020000000000000">index.html</A>
 <LI><A NAME="tex2html1190"
-  HREF="node18.html#SECTION041110050000000000000">Fechas</A>
+  HREF="node18.html#SECTION041110030000000000000">Ficheros</A>
 <LI><A NAME="tex2html1191"
-  HREF="node18.html#SECTION041110060000000000000">Drag adn Drop/Arrastra y Suelta</A>
+  HREF="node18.html#SECTION041110040000000000000">Registrando Manejadores de Eventos</A>
 <LI><A NAME="tex2html1192"
-  HREF="node18.html#SECTION041110070000000000000">Propagación de Eventos</A>
+  HREF="node18.html#SECTION041110050000000000000">Fechas</A>
 <LI><A NAME="tex2html1193"
-  HREF="node18.html#SECTION041110080000000000000">Ficheros</A>
+  HREF="node18.html#SECTION041110060000000000000">Drag and Drop/Arrastra y Suelta</A>
 <LI><A NAME="tex2html1194"
-  HREF="node18.html#SECTION041110090000000000000">global.css</A>
+  HREF="node18.html#SECTION041110070000000000000">Propagación de Eventos</A>
 <LI><A NAME="tex2html1195"
-  HREF="node18.html#SECTION0411100100000000000000">Ficheros de Prueba</A>
+  HREF="node18.html#SECTION041110080000000000000">Ficheros</A>
 <LI><A NAME="tex2html1196"
-  HREF="node18.html#SECTION0411100110000000000000">ini.js</A>
+  HREF="node18.html#SECTION041110090000000000000">Insertando Directamente una Imagen en HTML: &lt;img src="data:image/gif;base64, ...</A>
 <LI><A NAME="tex2html1197"
-  HREF="node18.html#SECTION0411100120000000000000">Dudas sobre la Sintáxis del Formato <TT>INI</TT></A>
+  HREF="node18.html#SECTION0411100100000000000000">insertBefore</A>
 <LI><A NAME="tex2html1198"
-  HREF="node18.html#SECTION0411100130000000000000">Tareas</A>
+  HREF="node18.html#SECTION0411100110000000000000">global.css</A>
 <LI><A NAME="tex2html1199"
-  HREF="node18.html#SECTION0411100140000000000000">Véase</A>
+  HREF="node18.html#SECTION0411100120000000000000">Ficheros de Prueba</A>
+<LI><A NAME="tex2html1200"
+  HREF="node18.html#SECTION0411100130000000000000">ini.js</A>
+<LI><A NAME="tex2html1201"
+  HREF="node18.html#SECTION0411100140000000000000">Dudas sobre la Sintáxis del Formato <TT>INI</TT></A>
+<LI><A NAME="tex2html1202"
+  HREF="node18.html#SECTION0411100150000000000000">Tareas</A>
+<LI><A NAME="tex2html1203"
+  HREF="node18.html#SECTION0411100160000000000000">Véase</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
 
 <H1><A NAME="SECTION041110000000000000000"></A>
-   <A NAME="4182"></A>
+   <A NAME="4188"></A>
 <BR>
 Práctica: Ficheros INI
 </H1>
@@ -311,7 +315,7 @@ Fechas</A>
 <P>
 
 <H4><A NAME="SECTION041110060000000000000">
-Drag adn Drop/Arrastra y Suelta</A>
+Drag and Drop/Arrastra y Suelta</A>
 </H4>
   
 
@@ -362,21 +366,21 @@ Suppose you have a table and within that table you have an anchor
 Formally, the event path is broken into three phases. 
       
 <UL>
-<LI>In the <A NAME="4211"></A><SPAN  CLASS="textbf">capture phase</SPAN>, the event starts at the top of the DOM tree, and propagates through
+<LI>In the <A NAME="4217"></A><SPAN  CLASS="textbf">capture phase</SPAN>, the event starts at the top of the DOM tree, and propagates through
       to the parent of the target. 
 </LI>
-<LI>In the <A NAME="4213"></A><SPAN  CLASS="textbf">target phase</SPAN>, the event object arrives
+<LI>In the <A NAME="4219"></A><SPAN  CLASS="textbf">target phase</SPAN>, the event object arrives
       at its target. This is generally where you will write your event-handling
       code. 
 </LI>
-<LI>In the <A NAME="4215"></A><SPAN  CLASS="textbf">bubble phase</SPAN>, the event will move back up through the tree
+<LI>In the <A NAME="4221"></A><SPAN  CLASS="textbf">bubble phase</SPAN>, the event will move back up through the tree
       until it reaches the top. Bubble phase propagation happens in reverse
       order to the capture phase, with an event starting at the parent of
       the target and ending up back at the top of the DOM tree. 
 </LI>
 <LI>These days,
-      there’s a choice to register an event in either the <A NAME="4217"></A><SPAN  CLASS="textbf">capture phase</SPAN>
-      or the <A NAME="4219"></A><SPAN  CLASS="textbf">bubble phase</SPAN>. 
+      there’s a choice to register an event in either the <A NAME="4223"></A><SPAN  CLASS="textbf">capture phase</SPAN>
+      or the <A NAME="4225"></A><SPAN  CLASS="textbf">bubble phase</SPAN>. 
 
 <P>
 
@@ -484,9 +488,32 @@ Once one of these read methods is called on your <code>FileReader</code> object,
     -rw-r--r--  1 casiano  staff  1530 15 feb 21:00 readimages.html
 </PRE>
 </LI>
+</UL>
+
+<P>
+</LI>
+</UL>
+<H4><A NAME="SECTION041110090000000000000">
+Insertando Directamente una Imagen en HTML: &lt;img src="data:image/gif;base64, ...</A>
+</H4>
+  
+
+<P>
+
+<UL>
 <LI><A NAME="tex2html167"
   HREF="http://jsfiddle.net/casiano/Xadvz/#base">base64 testing image jsfiddle</A>
 </LI>
+</UL>
+
+<P>
+
+<H4><A NAME="SECTION0411100100000000000000">
+insertBefore</A>
+</H4>
+  
+
+<UL>
 <LI>The <code>insertBefore()</code> method inserts a node as a child, right before an existing child, which you specify. See
     <PRE>
     [~/src/javascript/fileapi/html5rocks]$ ls -l readimages.html 
@@ -494,12 +521,10 @@ Once one of these read methods is called on your <code>FileReader</code> object,
 </PRE>
 </LI>
 </UL>
-</LI>
-</UL>
 
 <P>
 
-<H4><A NAME="SECTION041110090000000000000">
+<H4><A NAME="SECTION0411100110000000000000">
 global.css</A>
 </H4>
   
@@ -554,7 +579,7 @@ body
 
 <P>
 
-<H4><A NAME="SECTION0411100100000000000000">
+<H4><A NAME="SECTION0411100120000000000000">
 Ficheros de Prueba</A>
 </H4>
   
@@ -602,7 +627,7 @@ file = "payroll.dat"
 
 <P>
 
-<H4><A NAME="SECTION0411100110000000000000">
+<H4><A NAME="SECTION0411100130000000000000">
 ini.js</A>
 </H4>
   
@@ -695,7 +720,7 @@ para saber mas sobre <code>JSON.stringify</code>.
 
 <P>
 
-<H4><A NAME="SECTION0411100120000000000000">
+<H4><A NAME="SECTION0411100140000000000000">
 Dudas sobre la Sintáxis del Formato <TT>INI</TT></A>
 </H4>
   
@@ -767,7 +792,7 @@ six =6
 
 <P>
 
-<H4><A NAME="SECTION0411100130000000000000">
+<H4><A NAME="SECTION0411100150000000000000">
 Tareas</A>
 </H4>
   
@@ -808,7 +833,7 @@ Es conveniente que consiga estos objetivos:
 
 <P>
 
-<H4><A NAME="SECTION0411100140000000000000">
+<H4><A NAME="SECTION0411100160000000000000">
 Véase</A>
 </H4>
   
@@ -836,19 +861,19 @@ Véase</A>
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1184"
+<A NAME="tex2html1186"
   HREF="node19.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1178"
+<A NAME="tex2html1180"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1172"
+<A NAME="tex2html1174"
   HREF="node17.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1180"
+<A NAME="tex2html1182"
   HREF="node91.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1182"
+<A NAME="tex2html1184"
   HREF="node94.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -888,11 +913,11 @@ Véase</A>
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1185"
+<B> Sig:</B> <A NAME="tex2html1187"
   HREF="node19.html">Práctica: Analizador Léxico para</A>
-<B>Sup:</B> <A NAME="tex2html1179"
+<B>Sup:</B> <A NAME="tex2html1181"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html1173"
+<B> Ant:</B> <A NAME="tex2html1175"
   HREF="node17.html">Ejercicios</A>
 </DIV>
 <!--End of Navigation Panel-->
