--- a/node7.html
+++ b/node7.html
@@ -298,31 +298,35 @@ Expresiones Regulares y Análisis Léxico en JavaScript
 <LI><A NAME="tex2html951"
   HREF="node18.html#SECTION041110050000000000000">Fechas</A>
 <LI><A NAME="tex2html952"
-  HREF="node18.html#SECTION041110060000000000000">Drag adn Drop/Arrastra y Suelta</A>
+  HREF="node18.html#SECTION041110060000000000000">Drag and Drop/Arrastra y Suelta</A>
 <LI><A NAME="tex2html953"
   HREF="node18.html#SECTION041110070000000000000">Propagación de Eventos</A>
 <LI><A NAME="tex2html954"
   HREF="node18.html#SECTION041110080000000000000">Ficheros</A>
 <LI><A NAME="tex2html955"
-  HREF="node18.html#SECTION041110090000000000000">global.css</A>
+  HREF="node18.html#SECTION041110090000000000000">Insertando Directamente una Imagen en HTML: &lt;img src="data:image/gif;base64, ...</A>
 <LI><A NAME="tex2html956"
-  HREF="node18.html#SECTION0411100100000000000000">Ficheros de Prueba</A>
+  HREF="node18.html#SECTION0411100100000000000000">insertBefore</A>
 <LI><A NAME="tex2html957"
-  HREF="node18.html#SECTION0411100110000000000000">ini.js</A>
+  HREF="node18.html#SECTION0411100110000000000000">global.css</A>
 <LI><A NAME="tex2html958"
-  HREF="node18.html#SECTION0411100120000000000000">Dudas sobre la Sintáxis del Formato <TT>INI</TT></A>
+  HREF="node18.html#SECTION0411100120000000000000">Ficheros de Prueba</A>
 <LI><A NAME="tex2html959"
-  HREF="node18.html#SECTION0411100130000000000000">Tareas</A>
+  HREF="node18.html#SECTION0411100130000000000000">ini.js</A>
 <LI><A NAME="tex2html960"
-  HREF="node18.html#SECTION0411100140000000000000">Véase</A>
+  HREF="node18.html#SECTION0411100140000000000000">Dudas sobre la Sintáxis del Formato <TT>INI</TT></A>
+<LI><A NAME="tex2html961"
+  HREF="node18.html#SECTION0411100150000000000000">Tareas</A>
+<LI><A NAME="tex2html962"
+  HREF="node18.html#SECTION0411100160000000000000">Véase</A>
 </UL>
 <BR>
-<LI><A NAME="tex2html961"
+<LI><A NAME="tex2html963"
   HREF="node19.html">Práctica: Analizador Léxico para Un Subconjunto de JavaScript</A>
 <UL>
-<LI><A NAME="tex2html962"
+<LI><A NAME="tex2html964"
   HREF="node19.html#SECTION041120010000000000000">TDOP, Top Down Operator Precedence</A>
-<LI><A NAME="tex2html963"
+<LI><A NAME="tex2html965"
   HREF="node19.html#SECTION041120020000000000000">Objetivos de la Práctica</A>
 </UL></UL>
 <!--End of Table of Child-Links-->
