--- a/node18.html
+++ b/node18.html
@@ -28,19 +28,19 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <BODY >
 
 <DIV CLASS="navigation">
-<A NAME="tex2html1186"
+<A NAME="tex2html1187"
   HREF="node19.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1180"
+<A NAME="tex2html1181"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1174"
+<A NAME="tex2html1175"
   HREF="node17.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1182"
+<A NAME="tex2html1183"
   HREF="node91.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1184"
+<A NAME="tex2html1185"
   HREF="node94.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -80,18 +80,18 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1187"
+<B> Sig:</B> <A NAME="tex2html1188"
   HREF="node19.html">Práctica: Analizador Léxico para</A>
-<B>Sup:</B> <A NAME="tex2html1181"
+<B>Sup:</B> <A NAME="tex2html1182"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html1175"
+<B> Ant:</B> <A NAME="tex2html1176"
   HREF="node17.html">Ejercicios</A>
 <B> Con:</B> 
-<A NAME="tex2html1182"
+<A NAME="tex2html1183"
   HREF="node91.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A>
 <B> Ind:</B> 
-<A NAME="tex2html1184"
+<A NAME="tex2html1185"
   HREF="node94.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A>
 <BR> <P>
@@ -103,44 +103,46 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <UL CLASS="ChildLinks">
 <LI><UL>
 <LI><UL>
-<LI><A NAME="tex2html1188"
-  HREF="node18.html#SECTION041110010000000000000">Donde</A>
 <LI><A NAME="tex2html1189"
-  HREF="node18.html#SECTION041110020000000000000">index.html</A>
+  HREF="node18.html#SECTION041110010000000000000">Donde</A>
 <LI><A NAME="tex2html1190"
-  HREF="node18.html#SECTION041110030000000000000">Ficheros</A>
+  HREF="node18.html#SECTION041110020000000000000">index.html</A>
 <LI><A NAME="tex2html1191"
-  HREF="node18.html#SECTION041110040000000000000">Registrando Manejadores de Eventos</A>
+  HREF="node18.html#SECTION041110030000000000000">Shortcut icon</A>
 <LI><A NAME="tex2html1192"
-  HREF="node18.html#SECTION041110050000000000000">Fechas</A>
+  HREF="node18.html#SECTION041110040000000000000">Ficheros</A>
 <LI><A NAME="tex2html1193"
-  HREF="node18.html#SECTION041110060000000000000">Drag and Drop/Arrastra y Suelta</A>
+  HREF="node18.html#SECTION041110050000000000000">Registrando Manejadores de Eventos</A>
 <LI><A NAME="tex2html1194"
-  HREF="node18.html#SECTION041110070000000000000">Propagación de Eventos</A>
+  HREF="node18.html#SECTION041110060000000000000">Fechas</A>
 <LI><A NAME="tex2html1195"
-  HREF="node18.html#SECTION041110080000000000000">Ficheros</A>
+  HREF="node18.html#SECTION041110070000000000000">Drag and Drop/Arrastra y Suelta</A>
 <LI><A NAME="tex2html1196"
-  HREF="node18.html#SECTION041110090000000000000">Insertando Directamente una Imagen en HTML: &lt;img src="data:image/gif;base64, ...</A>
+  HREF="node18.html#SECTION041110080000000000000">Propagación de Eventos</A>
 <LI><A NAME="tex2html1197"
-  HREF="node18.html#SECTION0411100100000000000000">insertBefore</A>
+  HREF="node18.html#SECTION041110090000000000000">Ficheros</A>
 <LI><A NAME="tex2html1198"
-  HREF="node18.html#SECTION0411100110000000000000">global.css</A>
+  HREF="node18.html#SECTION0411100100000000000000">Insertando Directamente una Imagen en HTML: &lt;img src="data:image/gif;base64, ...</A>
 <LI><A NAME="tex2html1199"
-  HREF="node18.html#SECTION0411100120000000000000">Ficheros de Prueba</A>
+  HREF="node18.html#SECTION0411100110000000000000">insertBefore</A>
 <LI><A NAME="tex2html1200"
-  HREF="node18.html#SECTION0411100130000000000000">ini.js</A>
+  HREF="node18.html#SECTION0411100120000000000000">global.css</A>
 <LI><A NAME="tex2html1201"
-  HREF="node18.html#SECTION0411100140000000000000">Dudas sobre la Sintáxis del Formato <TT>INI</TT></A>
+  HREF="node18.html#SECTION0411100130000000000000">Ficheros de Prueba</A>
 <LI><A NAME="tex2html1202"
-  HREF="node18.html#SECTION0411100150000000000000">Tareas</A>
+  HREF="node18.html#SECTION0411100140000000000000">ini.js</A>
 <LI><A NAME="tex2html1203"
-  HREF="node18.html#SECTION0411100160000000000000">Véase</A>
+  HREF="node18.html#SECTION0411100150000000000000">Dudas sobre la Sintáxis del Formato <TT>INI</TT></A>
+<LI><A NAME="tex2html1204"
+  HREF="node18.html#SECTION0411100160000000000000">Tareas</A>
+<LI><A NAME="tex2html1205"
+  HREF="node18.html#SECTION0411100170000000000000">Véase</A>
 </UL></UL></UL>
 <!--End of Table of Child-Links-->
 <HR>
 
 <H1><A NAME="SECTION041110000000000000000"></A>
-   <A NAME="4188"></A>
+   <A NAME="4191"></A>
 <BR>
 Práctica: Ficheros INI
 </H1>
@@ -222,6 +224,17 @@ index.html</A>
 <P>
 
 <H4><A NAME="SECTION041110030000000000000">
+Shortcut icon</A>
+</H4>
+  
+
+<PRE>
+     &lt;link rel="shortcut icon" href="etsiiull.png" type="image/x-icon"&gt;
+</PRE>
+
+<P>
+
+<H4><A NAME="SECTION041110040000000000000">
 Ficheros</A>
 </H4>
   
@@ -269,7 +282,7 @@ Source code in
 <P>
 </LI>
 </UL>
-<H4><A NAME="SECTION041110040000000000000">
+<H4><A NAME="SECTION041110050000000000000">
 Registrando Manejadores de Eventos</A>
 </H4>
   
@@ -292,7 +305,7 @@ method
 
 <P>
 
-<H4><A NAME="SECTION041110050000000000000">
+<H4><A NAME="SECTION041110060000000000000">
 Fechas</A>
 </H4>
   
@@ -314,7 +327,7 @@ Fechas</A>
 
 <P>
 
-<H4><A NAME="SECTION041110060000000000000">
+<H4><A NAME="SECTION041110070000000000000">
 Drag and Drop/Arrastra y Suelta</A>
 </H4>
   
@@ -345,7 +358,7 @@ o bien en:
 
 <P>
 
-<H4><A NAME="SECTION041110070000000000000">
+<H4><A NAME="SECTION041110080000000000000">
 Propagación de Eventos</A>
 </H4>
   
@@ -366,21 +379,21 @@ Suppose you have a table and within that table you have an anchor
 Formally, the event path is broken into three phases. 
       
 <UL>
-<LI>In the <A NAME="4217"></A><SPAN  CLASS="textbf">capture phase</SPAN>, the event starts at the top of the DOM tree, and propagates through
+<LI>In the <A NAME="4224"></A><SPAN  CLASS="textbf">capture phase</SPAN>, the event starts at the top of the DOM tree, and propagates through
       to the parent of the target. 
 </LI>
-<LI>In the <A NAME="4219"></A><SPAN  CLASS="textbf">target phase</SPAN>, the event object arrives
+<LI>In the <A NAME="4226"></A><SPAN  CLASS="textbf">target phase</SPAN>, the event object arrives
       at its target. This is generally where you will write your event-handling
       code. 
 </LI>
-<LI>In the <A NAME="4221"></A><SPAN  CLASS="textbf">bubble phase</SPAN>, the event will move back up through the tree
+<LI>In the <A NAME="4228"></A><SPAN  CLASS="textbf">bubble phase</SPAN>, the event will move back up through the tree
       until it reaches the top. Bubble phase propagation happens in reverse
       order to the capture phase, with an event starting at the parent of
       the target and ending up back at the top of the DOM tree. 
 </LI>
 <LI>These days,
-      there’s a choice to register an event in either the <A NAME="4223"></A><SPAN  CLASS="textbf">capture phase</SPAN>
-      or the <A NAME="4225"></A><SPAN  CLASS="textbf">bubble phase</SPAN>. 
+      there’s a choice to register an event in either the <A NAME="4230"></A><SPAN  CLASS="textbf">capture phase</SPAN>
+      or the <A NAME="4232"></A><SPAN  CLASS="textbf">bubble phase</SPAN>. 
 
 <P>
 
@@ -408,7 +421,7 @@ Formally, the event path is broken into three phases.
 
 <P>
 
-<H4><A NAME="SECTION041110080000000000000">
+<H4><A NAME="SECTION041110090000000000000">
 Ficheros</A>
 </H4>
   
@@ -493,7 +506,7 @@ Once one of these read methods is called on your <code>FileReader</code> object,
 <P>
 </LI>
 </UL>
-<H4><A NAME="SECTION041110090000000000000">
+<H4><A NAME="SECTION0411100100000000000000">
 Insertando Directamente una Imagen en HTML: &lt;img src="data:image/gif;base64, ...</A>
 </H4>
   
@@ -508,7 +521,7 @@ Insertando Directamente una Imagen en HTML: &lt;img src="data:image/gif;base64, 
 
 <P>
 
-<H4><A NAME="SECTION0411100100000000000000">
+<H4><A NAME="SECTION0411100110000000000000">
 insertBefore</A>
 </H4>
   
@@ -524,7 +537,7 @@ insertBefore</A>
 
 <P>
 
-<H4><A NAME="SECTION0411100110000000000000">
+<H4><A NAME="SECTION0411100120000000000000">
 global.css</A>
 </H4>
   
@@ -579,7 +592,7 @@ body
 
 <P>
 
-<H4><A NAME="SECTION0411100120000000000000">
+<H4><A NAME="SECTION0411100130000000000000">
 Ficheros de Prueba</A>
 </H4>
   
@@ -627,7 +640,7 @@ file = "payroll.dat"
 
 <P>
 
-<H4><A NAME="SECTION0411100130000000000000">
+<H4><A NAME="SECTION0411100140000000000000">
 ini.js</A>
 </H4>
   
@@ -720,7 +733,7 @@ para saber mas sobre <code>JSON.stringify</code>.
 
 <P>
 
-<H4><A NAME="SECTION0411100140000000000000">
+<H4><A NAME="SECTION0411100150000000000000">
 Dudas sobre la Sintáxis del Formato <TT>INI</TT></A>
 </H4>
   
@@ -792,7 +805,7 @@ six =6
 
 <P>
 
-<H4><A NAME="SECTION0411100150000000000000">
+<H4><A NAME="SECTION0411100160000000000000">
 Tareas</A>
 </H4>
   
@@ -833,7 +846,7 @@ Es conveniente que consiga estos objetivos:
 
 <P>
 
-<H4><A NAME="SECTION0411100160000000000000">
+<H4><A NAME="SECTION0411100170000000000000">
 Véase</A>
 </H4>
   
@@ -861,19 +874,19 @@ Véase</A>
 <P>
 
 <DIV CLASS="navigation"><HR>
-<A NAME="tex2html1186"
+<A NAME="tex2html1187"
   HREF="node19.html">
 <IMG WIDTH="37" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="next" SRC="next.png"></A> 
-<A NAME="tex2html1180"
+<A NAME="tex2html1181"
   HREF="node7.html">
 <IMG WIDTH="26" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="up" SRC="up.png"></A> 
-<A NAME="tex2html1174"
+<A NAME="tex2html1175"
   HREF="node17.html">
 <IMG WIDTH="63" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="previous" SRC="prev.png"></A> 
-<A NAME="tex2html1182"
+<A NAME="tex2html1183"
   HREF="node91.html">
 <IMG WIDTH="65" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="contents" SRC="contents.png"></A> 
-<A NAME="tex2html1184"
+<A NAME="tex2html1185"
   HREF="node94.html">
 <IMG WIDTH="43" HEIGHT="24" ALIGN="BOTTOM" BORDER="0" ALT="index" SRC="index.png"></A> <A NAME="tex2html2"
   HREF="http://nereida.deioc.ull.es/perlexamples/index.html"><IMG
@@ -913,11 +926,11 @@ Véase</A>
  SRC="logopcgull.gif"
  ALT="crguezl at github"></A>
 <BR>
-<B> Sig:</B> <A NAME="tex2html1187"
+<B> Sig:</B> <A NAME="tex2html1188"
   HREF="node19.html">Práctica: Analizador Léxico para</A>
-<B>Sup:</B> <A NAME="tex2html1181"
+<B>Sup:</B> <A NAME="tex2html1182"
   HREF="node7.html">Expresiones Regulares y Análisis</A>
-<B> Ant:</B> <A NAME="tex2html1175"
+<B> Ant:</B> <A NAME="tex2html1176"
   HREF="node17.html">Ejercicios</A>
 </DIV>
 <!--End of Navigation Panel-->
