--- a/node18.html
+++ b/node18.html
@@ -325,7 +325,8 @@ encoded string.
 Starts reading the contents of the specified <code>Blob</code>, once finished, the result attribute contains the contents of the file as a text string.
 </LI>
 </UL>
-Once one of these read methods is called on your <code>FileReader</code> object, the <code>onloadstart</code>, <code>onprogress</code>, <code>onload</code>, <code>onabort</code>, <code>onerror</code>, and <code>onloadend</code> can be used to track its progress.
+</LI>
+<LI>Once one of these read methods is called on your <code>FileReader</code> object, the <code>onloadstart</code>, <code>onprogress</code>, <code>onload</code>, <code>onabort</code>, <code>onerror</code>, and <code>onloadend</code> can be used to track its progress.
 </LI>
 <LI>When the load finishes, 
     the reader's
