--- a/node18.html
+++ b/node18.html
@@ -140,7 +140,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION041110000000000000000"></A>
-   <A NAME="4192"></A>
+   <A NAME="4194"></A>
 <BR>
 Práctica: Ficheros INI
 </H1>
@@ -326,7 +326,24 @@ Starts reading the contents of the specified <code>Blob</code>, once finished, t
 </LI>
 </UL>
 </LI>
-<LI>Once one of these read methods is called on your <code>FileReader</code> object, the <code>onloadstart</code>, <code>onprogress</code>, <code>onload</code>, <code>onabort</code>, <code>onerror</code>, and <code>onloadend</code> can be used to track its progress.
+<LI>Once one of these read methods is called on your <code>FileReader</code> object, the 
+
+<UL>
+<LI><code>onloadstart</code>
+</LI>
+<LI><code>onprogress</code>
+</LI>
+<LI><code>onload</code>
+</LI>
+<LI><code>onabort</code>
+</LI>
+<LI><code>onerror</code> and 
+</LI>
+<LI><code>onloadend</code> 
+</LI>
+</UL>
+</LI>
+<LI>can be used to track its progress.
 </LI>
 <LI>When the load finishes, 
     the reader's
@@ -342,7 +359,8 @@ Starts reading the contents of the specified <code>Blob</code>, once finished, t
     See 
     
 <UL>
-<LI><A NAME="tex2html158"
+<LI>Ejemplo con carga de imágenes:
+    <A NAME="tex2html158"
   HREF="http://jsfiddle.net/casiano/7ekt8/">jsfiddle</A>
 </LI>
 <LI><A NAME="tex2html159"
@@ -440,21 +458,21 @@ Suppose you have a table and within that table you have an anchor
 Formally, the event path is broken into three phases. 
       
 <UL>
-<LI>In the <A NAME="4223"></A><SPAN  CLASS="textbf">capture phase</SPAN>, the event starts at the top of the DOM tree, and propagates through
+<LI>In the <A NAME="4225"></A><SPAN  CLASS="textbf">capture phase</SPAN>, the event starts at the top of the DOM tree, and propagates through
       to the parent of the target. 
 </LI>
-<LI>In the <A NAME="4225"></A><SPAN  CLASS="textbf">target phase</SPAN>, the event object arrives
+<LI>In the <A NAME="4227"></A><SPAN  CLASS="textbf">target phase</SPAN>, the event object arrives
       at its target. This is generally where you will write your event-handling
       code. 
 </LI>
-<LI>In the <A NAME="4227"></A><SPAN  CLASS="textbf">bubble phase</SPAN>, the event will move back up through the tree
+<LI>In the <A NAME="4229"></A><SPAN  CLASS="textbf">bubble phase</SPAN>, the event will move back up through the tree
       until it reaches the top. Bubble phase propagation happens in reverse
       order to the capture phase, with an event starting at the parent of
       the target and ending up back at the top of the DOM tree. 
 </LI>
 <LI>These days,
-      there’s a choice to register an event in either the <A NAME="4229"></A><SPAN  CLASS="textbf">capture phase</SPAN>
-      or the <A NAME="4231"></A><SPAN  CLASS="textbf">bubble phase</SPAN>. 
+      there’s a choice to register an event in either the <A NAME="4231"></A><SPAN  CLASS="textbf">capture phase</SPAN>
+      or the <A NAME="4233"></A><SPAN  CLASS="textbf">bubble phase</SPAN>. 
 
 <P>
 
