--- a/node18.html
+++ b/node18.html
@@ -363,10 +363,10 @@ Starts reading the contents of the specified <code>Blob</code>, once finished, t
     <A NAME="tex2html158"
   HREF="http://jsfiddle.net/casiano/7ekt8/">jsfiddle</A>
 </LI>
-<LI><A NAME="tex2html159"
+<LI>Ejemplo con carga de imágenes en <A NAME="tex2html159"
   HREF="https://github.com/crguezl/files-in-javascript-tut/blob/master/readimages.html">GitHub</A>
 </LI>
-<LI><A NAME="tex2html160"
+<LI>Ejemplo con carga de imágenes ejecutándose en GitHub pages <A NAME="tex2html160"
   HREF="http://crguezl.github.io/files-in-javascript-tut/readimages.html">gh-pages</A>
 </LI>
 <LI>or
