--- a/node18.html
+++ b/node18.html
@@ -369,7 +369,7 @@ Starts reading the contents of the specified <code>Blob</code>, once finished, t
 <LI>Ejemplo con carga de imágenes ejecutándose en GitHub pages <A NAME="tex2html160"
   HREF="http://crguezl.github.io/files-in-javascript-tut/readimages.html">gh-pages</A>
 </LI>
-<LI>or
+<LI>Carpeta con el ejemplo con carga de imágenes
     <PRE>
     [~/src/javascript/fileapi/html5rocks]$ pwd -P
     /Users/casiano/local/src/javascript/fileapi/html5rocks
