--- a/node19.html
+++ b/node19.html
@@ -111,7 +111,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION041120000000000000000"></A>
-   <A NAME="4275"></A>
+   <A NAME="4277"></A>
 <BR>
 Práctica: Analizador Léxico para Un Subconjunto de JavaScript
 </H1>
@@ -243,6 +243,8 @@ Visite los enlaces <code> withajax.html</code> y <code>withget.html</code>.
   HREF="https://www.heroku.com/">Heroku</A>.
 Para ver como hacerlo siga las indicaciones en la sección
 <I>Heroku</I> <A HREF="node253.html#chapter:heroku"><IMG  ALIGN="BOTTOM" BORDER="1" ALT="[*]" SRC="crossref.png"></A> en estos apuntes
+
+<P>
 </LI>
 <LI>Una primera solución de la que puede partir se encuentra en:
 <A NAME="tex2html184"
@@ -251,6 +253,11 @@ en github.
 Veala en funcionamiento en 
 <A NAME="tex2html185"
   HREF="http://crguezl.github.io/ull-etsii-grado-pl-minijavascript/">GitHub Pages</A>
+<P>
+<PRE>
+[~/srcPLgrado/lexical_analysis_top_down_operator_precedence(gh-pages)]$ pwd -P
+/Users/casiano/local/src/javascript/PLgrado/lexical_analysis_top_down_operator_precedence
+</PRE>
 </LI>
 <LI>El método <code>tokens</code> retorna el array de tokens. Puede encontrarlo en
 <A NAME="tex2html186"
