--- a/node19.html
+++ b/node19.html
@@ -111,7 +111,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION041120000000000000000"></A>
-   <A NAME="4285"></A>
+   <A NAME="4287"></A>
 <BR>
 Práctica: Analizador Léxico para Un Subconjunto de JavaScript
 </H1>
@@ -241,7 +241,7 @@ Ahora visite en su navegador la URL <code>http://localhost:9292</code>.
 <P>
 </LI>
 <LI>Añada una zona de Drag-and-Drop a la que se pueda arrastrar el fichero a analizar.
-Tiene un ejemplo de como hacerlo en:
+Tiene un ejemplo de como hacerlo en el fichero <code>dragandrop.html</code> en:
 
 <UL>
 <LI><A NAME="tex2html183"
@@ -265,17 +265,23 @@ Para ver como hacerlo siga las indicaciones en la sección
 <P>
 </LI>
 <LI>Una primera solución de la que puede partir se encuentra en:
-<A NAME="tex2html186"
+
+<UL>
+<LI><A NAME="tex2html186"
   HREF="https://github.com/crguezl/ull-etsii-grado-pl-minijavascript/tree/gh-pages">https://github.com/crguezl/ull-etsii-grado-pl-minijavascript/tree/gh-pages</A>
 en github. 
-Veala en funcionamiento en 
+</LI>
+<LI>Veala en funcionamiento en 
 <A NAME="tex2html187"
   HREF="http://crguezl.github.io/ull-etsii-grado-pl-minijavascript/">GitHub Pages</A>
-<P>
+</LI>
+<LI><P>
 <PRE>
 [~/srcPLgrado/lexical_analysis_top_down_operator_precedence(gh-pages)]$ pwd -P
 /Users/casiano/local/src/javascript/PLgrado/lexical_analysis_top_down_operator_precedence
 </PRE>
+</LI>
+</UL>
 </LI>
 <LI>El método <code>tokens</code> retorna el array de tokens. Puede encontrarlo en
 <A NAME="tex2html188"
