--- a/node19.html
+++ b/node19.html
@@ -111,7 +111,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION041120000000000000000"></A>
-   <A NAME="4287"></A>
+   <A NAME="4288"></A>
 <BR>
 Práctica: Analizador Léxico para Un Subconjunto de JavaScript
 </H1>
@@ -163,7 +163,8 @@ on <code>parse.js</code> and <code>tokens.js</code>.
 <LI><A NAME="tex2html178"
   HREF="https://github.com/douglascrockford/TDOP/blob/master/tokens.js">tokens.js</A>.
 produces an array of token objects from a string.
-This is the file we are going to work in this lab.
+
+<FONT COLOR="#ff0000"> This is the file we are going to work in this lab</FONT>.
 </LI>
 </UL>
 </LI>
