--- a/node19.html
+++ b/node19.html
@@ -111,7 +111,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION041120000000000000000"></A>
-   <A NAME="4288"></A>
+   <A NAME="4292"></A>
 <BR>
 Práctica: Analizador Léxico para Un Subconjunto de JavaScript
 </H1>
@@ -208,6 +208,16 @@ Vea el ejemplo en
 <LI>Express.JS:
 <A NAME="tex2html181"
   HREF="https://github.com/crguezl/expressloadfileontotextarea">https://github.com/crguezl/expressloadfileontotextarea</A>
+<P>
+Instale las dependencias con:
+<PRE>
+~/javascript/jquery/loadfileontotexarea/expressloadfileontotextarea(master)]$ npm install
+</PRE>
+Y ejecute el servidor:
+<PRE>
+[~/javascript/jquery/loadfileontotexarea/expressloadfileontotextarea(master)]$ node app.js
+Example app listening at http://0.0.0.0:3000
+</PRE>
 </LI>
 <LI>Sinatra (Ruby):
 <A NAME="tex2html182"
