--- a/node19.html
+++ b/node19.html
@@ -255,17 +255,21 @@ Ahora visite en su navegador la URL <code>http://localhost:9292</code>.
 Tiene un ejemplo de como hacerlo en el fichero <code>dragandrop.html</code> en:
 
 <UL>
-<LI><A NAME="tex2html183"
+<LI>Repositorio:
+<A NAME="tex2html183"
   HREF="https://github.com/crguezl/files-in-javascript-tut">https://github.com/crguezl/files-in-javascript-tut</A>
 </LI>
-<LI><A NAME="tex2html184"
+<LI>Despliegue en gh-pages:
+<A NAME="tex2html184"
   HREF="http://crguezl.github.io/files-in-javascript-tut/">http://crguezl.github.io/files-in-javascript-tut/</A>
 </LI>
 </UL>
 
 <P>
 </LI>
-<LI>Añada pruebas 
+<LI>Añada pruebas  como en las prácticas anteriores
+</LI>
+<LI>Use los issues de GitHub
 </LI>
 <LI>Haga el despliegue de su aplicación en 
 <A NAME="tex2html185"
