--- a/node19.html
+++ b/node19.html
@@ -111,7 +111,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION041120000000000000000"></A>
-   <A NAME="4298"></A>
+   <A NAME="4299"></A>
 <BR>
 Práctica: Analizador Léxico para Un Subconjunto de JavaScript
 </H1>
@@ -198,7 +198,8 @@ usando expresiones regulares.
 <LI>Evite que se hagan copias de la cadena siendo procesada. Muévase dentro de la misma cadena usando
 <code>lastIndex</code>
 </LI>
-<LI>Añada botones/enlaces/menu de selección que permitan cargar un fichero específico 
+<LI>
+<FONT COLOR="#ff0000"> Añada botones/enlaces/menu de selección que permitan cargar un fichero específico</FONT> 
 de una lista de ficheros en la <code>texarea</code> de entrada.
 
 <P>
