--- a/node19.html
+++ b/node19.html
@@ -328,7 +328,7 @@ en github.
 </LI>
 </UL>
 </LI>
-<LI>El método <code>tokens</code> retorna el array de tokens. Puede encontrarlo en
+<LI>El método <code>tokens</code> original retorna el array de tokens. Puede encontrarlo en
 <A NAME="tex2html193"
   HREF="https://github.com/douglascrockford/TDOP/blob/master/tokens.js">tokens.js</A>.
 </LI>
