--- a/node19.html
+++ b/node19.html
@@ -111,7 +111,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION041120000000000000000"></A>
-   <A NAME="4307"></A>
+   <A NAME="4311"></A>
 <BR>
 Práctica: Analizador Léxico para Un Subconjunto de JavaScript
 </H1>
@@ -273,7 +273,24 @@ en:
 
 <P>
 </LI>
-<LI>Añada pruebas  como en las prácticas anteriores
+<LI>Añada pruebas  como en las prácticas anteriores. 
+
+<UL>
+<LI>En Travis tendrá que lanzar el servidor antes de la ejecución de las pruebas.
+Puede usar un <code>.travis.yml</code> parecido a este (para Ruby):
+<PRE>
+[~/sinatra/sinatra-selenium/capybara-selenium(master)]$ cat .travis.yml 
+language: ruby
+rvm: 2.1.2
+before_script:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - sleep 3
+  - bundle exec rake server &amp; 
+  - sleep 1
+</PRE>
+</LI>
+</UL>
 </LI>
 <LI>Use los issues de GitHub. Lea
 <A NAME="tex2html187"
