--- a/node19.html
+++ b/node19.html
@@ -289,6 +289,8 @@ before_script:
   - bundle exec rake server &amp; 
   - sleep 1
 </PRE>
+Observe el ampersand en la línea
+<code>bundle exec rake server &amp;</code> para poner el servidor en background.
 </LI>
 </UL>
 </LI>
