--- a/node26.html
+++ b/node26.html
@@ -121,7 +121,7 @@ original version by:  Nikos Drakos, CBLU, University of Leeds
 <HR>
 
 <H1><A NAME="SECTION04260000000000000000"></A>
-   <A NAME="4857"></A>
+   <A NAME="4858"></A>
   
 <A NAME="practica:pl0"></A>
 <BR>
@@ -182,9 +182,12 @@ descrito por la gramática EBNF del
 que se describe en la 
 entrada de la Wikipedia 
 <FONT COLOR="#0000ff"> Recursive descent parser</FONT>. 
-Procure que el arbol generado refleje la asociatividad 
-correcta para las diferencias y las divisiones. 
-No es necesario que el lenguaje sea 
+</LI>
+<LI>
+<FONT COLOR="#ff0000"> Procure que el arbol generado refleje la asociatividad 
+correcta para las diferencias y las divisiones</FONT>. 
+</LI>
+<LI>No es necesario que el lenguaje sea 
 <FONT COLOR="#ff0000"> exactamente igual</FONT> pero debería 
 ser parecido. Tener
 los mismos constructos.
